--- a/spring-2015-msan622/homework3.html
+++ b/spring-2015-msan622/homework3.html
@@ -245,7 +245,7 @@ function areaseries(data) {
         .attr("dy", ".71em")
         .style("text-anchor", "end")
         .attr("transform", "translate(60," + 10 + "), rotate(-90)")
-        .text("Casualties");
+        .text("Drivers");
 
 
     function filterStat() {
