--- a/spring-2015-msan622/homework3.html
+++ b/spring-2015-msan622/homework3.html
@@ -135,7 +135,7 @@
     </p>
 </div>
 <br>
-<div id="plot2" display="block"><h2>Area Plot</h2>
+<div><h2>Area Plot</h2>
     <span id="listanchor"></span>
     <div id="areaseries"></div>
 </div>
@@ -214,6 +214,8 @@ function areaseries(data) {
     var svg = d3.select("#areaseries").append("svg")
         .attr("width", width + margin.left + margin.right)
         .attr("height", height + margin.top + margin.bottom)
+        .attr("id", "plot2")
+        .attr("display", "block")
         .append("g")
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
