--- a/spring-2015-msan622/project_sketch.html
+++ b/spring-2015-msan622/project_sketch.html
@@ -52,13 +52,20 @@
   <p>Of the many possible interactions, I intend to implement the following in a linked, unified fashion: 
       <ul>
           <li><u>Filtering</u>: by country, alcohol category, year, and/or continent</li>
-          <li><u>Zooming></u>: in order to zoom into a region of the globe/projection</li>
+          <li><u>Zooming</u>: in order to zoom into a region of the globe/projection</li>
           <li><u>Brushing</u>: if there are any time series components, it will include this for detail views</li>
           <li><u>Sorting</u>: here, again, users should be able to sort by country, region, year, or category</li>
       </ul>
   </p>
   <h2>Planned Interface</h2>
-  <p></p>
+  <p>My initial interface plan is below: 
+      <ol>
+          <li>Geographic map: Countries will be displayed on a world map projection. </li>
+          <li>Animated bubble chart: Comparing countries and their alcohol consumption over time, colored by continent. </li>
+          <li>Small multiples: Country statistics will be shown in small multiple format with statistics by country shown. </li>
+      </ol>
+  </p>
+  <div style="display: block; margin-left: auto; margin-right: auto;"><img src="data_vis_project_sketch.svg" width="960"></div>
 
 </div>
 <script>
