--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -71,7 +71,7 @@
 <h3><a id="project-assignments" class="anchor" href="#project-assignments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Assignments</h3>
 <p>
 <div><a href="project_dataset.html">Project Dataset</a></div>
-<div><a href="#">Project Sketch</a></div>
+<div><a href="project_sketch.html">Project Sketch</a></div>
 <div><a href="#">Project Prototype</a></div>
 <div><a href="#">Project Video</a></div>
 <div><a href="#">Project Report</a></div>
