--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../stylesheets/styles.css">
     <link rel="stylesheet" href="../stylesheets/pygment_trac.css">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <script src="../javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description" content="GitHub page of Jeff Baker (@jbaker22)">
     <!--[if lt IE 9]>
@@ -64,17 +65,17 @@
 <div><a href="homework1.html?hellothere!">Homework 1</a></div>
 <div><a href="homework2.html">Homework 2</a></div>
 <div><a href="homework3.html">Homework 3</a></div>
-<div><a href="#">Homework 4</a></div>
-<div><a href="#">Homework 5</a></div>
+<div><a href="homework4.html">Homework 4</a></div>
+<div><a href="homework5.html">Homework 5</a></div>
 </p>
 
 <h3><a id="project-assignments" class="anchor" href="#project-assignments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Project Assignments</h3>
 <p>
 <div><a href="project_dataset.html">Project Dataset</a></div>
 <div><a href="project_sketch.html">Project Sketch</a></div>
-<div><a href="#">Project Prototype</a></div>
-<div><a href="#">Project Video</a></div>
-<div><a href="#">Project Report</a></div>
+<div><a href="project_prototype.html">Project Prototype</a></div>
+<div><a href="project_video.html">Project Video</a></div>
+<div><a href="project_report.html">Project Report</a></div>
 </p>
 
 <h3><a id="participation" class="anchor" href="#participation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Participation</h3>
@@ -86,8 +87,6 @@
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    </div>    
   </body>
 </html>
