--- a/spring-2015-msan622/homework4.html
+++ b/spring-2015-msan622/homework4.html
@@ -24,19 +24,51 @@
         margin-right: auto;
     }
 
-    #plot2 {
-        margin-left: auto;
-        margin-right: auto;
+    svg {
+        background-color: white;
+        margin: 1px;
+        float: left;
+        /*border-style: solid;*/
+    }
+
+    svg#bars {
+        position: initial;
+    }
+
+    div.leftside{
+        float: left;
+        width: 50%;
+        /*border-color: blue;*/
+    }
+
+    svg.rightside{
+        float: left;
+        /*width: 48%;*/
+        border-color: red;
     }
 
     .axis path,
     .axis line {
-      fill: none;
-      stroke: #000;
-      shape-rendering: crispEdges;
+        fill: none;
+        stroke: darkgray;
+        shape-rendering: crispEdges;
     }
+
+    .x.axis path {
+        fill: none;
+        stroke: darkgray;
+        shape-rendering: crispEdges; 
+        /*display: none;*/
+    }
+
     .axis text {
         font: 11px sans-serif;
+    }
+
+    div#dashboard {
+        max-width: 960px;
+        margin: 0 auto;
+
     }
 
     .line {
@@ -45,16 +77,8 @@
       stroke-width: 1px;
     }
 
-    .line.line0 {
-      stroke: #1b9e77;
-    }
-
-    .line.line1 {
-      stroke: #d95f02;
-    }
-
-    .line.line2 {
-      stroke: #7570b3;
+    .bar:hover {
+      fill: rgba(171,217,233, 1.0);
     }
 
     .overlay {
@@ -62,58 +86,41 @@
       pointer-events: all;
     }
 
-    .focus circle {
-      fill: none;
-    }
-
-    .focus circle.y0 {
-      stroke: darkgreen;
-    }
-
-    .focus circle.y1 {
-      stroke: orangered;
-    }
-    .focus circle.y2 {
-      stroke: purple;
-    }
-
     .focus text {
         font: 11px sans-serif;
         text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
     }
 
-
-    .focus line {
-      stroke: purple;
-      shape-rendering: crispEdges;
+    .x.axis path {
+        display: none;
     }
 
-    .focus line.y0 {
-      stroke: steelblue;
-      stroke-dasharray: 3 3;
-      opacity: .5;
+    .d3-tip {
+      line-height: 1;
+      font-weight: bold;
+      padding: 12px;
+      background: rgba(37,37,37, 0.9);
+      color: #fff;
+      border-radius: 5px;
+    }
+    .d3-tip:after {
+      box-sizing: border-box;
+      display: inline;
+      font-size: 10px;
+      width: 100%;
+      line-height: 1;
+      color: rgba(37,37,37, 0.9);
+      content: "\25BC";
+      position: absolute;
+      text-align: center;
     }
 
-    .focus line.y1 {
-      stroke: indianred;
-      stroke-dasharray: 3 3;
-      opacity: .5;
-    }
-    .focus line.y2 {
-      stroke: purple;
-      stroke-dasharray: 3 3;
-      opacity: .5;
-    }
-    .brush .extent {
-      stroke: #fff;
-      fill-opacity: .125;
-      shape-rendering: crispEdges;
+    .d3-tip.n:after {
+        margin: -3px 0 0 0;
+        top: 100%;
+        left: 0;
     }
 
-    .area {
-        fill: #ca0020;
-        stroke-width: 0;
-    }
 
 </style>
 
@@ -123,14 +130,35 @@
   <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small><a href="#writeup">Submission details (below)</a></small>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-<script src="multiline.js"></script>
+<script src="hw4.js"></script>
 <body>
-<div id="dashboard"><br><h2>Movies Dashboard</h2>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small><a href="http://jbaker22.github.io/spring-2015-msan622/tableau_movies_dashboard.html" target="_blank">View dashboard mock-up here</a></small>
+    <br>
+    <h2>Movies Dashboard</h2>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<small><a href="http://jbaker22.github.io/spring-2015-msan622/tableau_movies_dashboard.html" target="_blank">View dashboard mock-up here</a></small><br>
+<div id="dashboard">
+    <div class="leftside" width="15" height="15">
+        <svg id="bars" class="leftside" width="10" height="100"></svg>
+        <svg id="heatmap" class="leftside" width="10" height="100"></svg>
+    </div>
+    <svg id="timeseries" class="rightside" width="10" height="10"></svg>
 </div>
 <br>
 <script>
 
+
+d3.csv("movie_data.csv", function(error, data) {
+    if (error) {
+        console.warn(data, error);
+        return;
+    }
+
+    console.log("data loaded: ", data);
+
+    // call draw functions defined in script.js
+    drawBars(data);
+    drawHeatmap(data);
+    // drawMultiples(data);
+});
 
 
 </script>
