--- a/spring-2015-msan622/homework4.html
+++ b/spring-2015-msan622/homework4.html
@@ -120,7 +120,24 @@
         top: 100%;
         left: 0;
     }
+      rect.bordered {
+        stroke: #E6E6E6;
+        stroke-width:2px;   
+      }
 
+      text.mono {
+        font-size: 9pt;
+        font-family: Consolas, courier;
+        fill: #aaa;
+      }
+
+      text.axis-workweek {
+        fill: #000;
+      }
+
+      text.axis-worktime {
+        fill: #000;
+      }
 
 </style>
 
@@ -151,13 +168,26 @@ d3.csv("movie_data.csv", function(error, data) {
         console.warn(data, error);
         return;
     }
-
-    console.log("data loaded: ", data);
-
-    // call draw functions defined in script.js
     drawBars(data);
+    drawMultiples(data);
+});
+
+d3.csv("movie_heatmap_data.csv", function(error, data) {
+    if (error) {
+        console.warn(data, error);
+        return;
+    }
+    data = d3.map(data, function(d) {
+      return {
+        mpaa: +d.mpaa,
+        genre: +d.genre,
+        value: +d.arpt
+      };
+    });
+
+    console.log("loading heatmap data");
     drawHeatmap(data);
-    // drawMultiples(data);
+
 });
 
 
@@ -167,35 +197,30 @@ d3.csv("movie_data.csv", function(error, data) {
     <h2>Submission Details</h2>
     <section id="functionality">
         <h3>Data Preprocessing</h3>
-        <p>Holy crap, so much pre-processing!</p>
+        <p>For the Tableau mock-up, I created a new column called "Genre," per Sophie's suggestion. This is an indicator field that contains the dummy variables of the films. Once this was done, another data table was created for the heat map, calculating the average rating per film, by genre. </p>
         <h3>Functionality List</h3>
         <p>The following features were implemented in order to reach each corresponding grade level.</p>
         <span id="c-level" style="font-size: 18"><b>Basic Functionality</b></span><br>
             <ul>
-              <li>Generated multi-series line plot</li>
-              <li>Animated time series bubble plot</li>
+              <li>Created mock-up in Tableau</li>
             </ul>
         <span id="b-level" style="font-size: 18"><b>Moderate Functionality</b></span><br>
             <ul>
-              <li>Panning enabled within "context" plot to shift the window of the larger "detail" view</li>
-              <li>Details-on-Demand enabled by hovering over the lines; tooltips show detailed values at each month</li>
+              <li>Created bar chart and heatmap in D3 with basic hover-over tooltips for additional information. </li>
             </ul>
         <span id="a-level" style="font-size: 18"><b>Advanced Functionality</b></span><br>
-            <ul>
+<!--             <ul>
               <li>Brushing enabled on the "context" section of the line chart</li>
               <li>Filtering (via pull-down menu) on area plot</li>
             </ul>
-
+ -->
     </section>
     <section id="motivation">
       <h3>Interactivity</h3>
-        <h4>Multi-line Chart</h4>
-        <p>There are three sections for this dashboard: </p>
-        <h4>Bar Chart: </h4>
-        <p>For the area chart, my goal was to plot the area and filter by dimension in the data. This was simply to explore using pull-down menus in combination with time series filtering. </p>
+        <p>The bars in the bar chart have tooltips enabled. </p>
         <h3>Motivation</h3>
-        <p>For the time series multi-line plot, I chose the template above because of it's multivariate possibilities. Multiple lines were drawn here for different statistics related to drivers. I chose my colors using a <a href="http://colorbrewer2.org/?type=qualitative&scheme=Dark2&n=6">six-class qualitative palette</a>, just to mix it up from the typical red/blue/green.</p>
-        <p>For the area plot, I wanted to keep it relatively simple, and focus more on the interactivity and smooth transitions with the pull-down menu. </p>
+        <p>The goal for me was to select unifying dimensions by which to change the visualizations on. In this case, I was focusing on MPAA rating, genre, and user ratings of each film. The colors are meant to show divergence in the heatmap as well. </p>
+        <p>Unfortunately, I ran out of time due to troubles with Tableau and getting the data in a format that Tableau would take. I also spent more time than I should using JavaScript to do my data manipulation. While I learned more JS, I ran out of time to push further with this assignment. </p>
     </section>
 </section>
 </body>
