updating file links

--- a/spring-2015-msan622/homework5.html
+++ b/spring-2015-msan622/homework5.html
@@ -123,10 +123,10 @@
  * For sample TopoJSON files, go to:
  * https://gist.github.com/mbostock/4090846
  */
-var base = "https://gist.githubusercontent.com/mbostock/4090846/raw/";
+// var base = "https://gist.githubusercontent.com/mbostock/4090846/raw/";
 var url = {
-    world: base + "world-50m.json",
-    earthquakes: "4.5_month.csv"
+    world: "https://gist.githubusercontent.com/mbostock/4090846/raw/world-50m.json",
+    earthquakes: "http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/4.5_month.csv"
 };
 
 // Uses reusable chart model
