--- a/spring-2015-msan622/index.html
+++ b/spring-2015-msan622/index.html
@@ -75,7 +75,7 @@
 <div><a href="project_sketch.html">Project Sketch</a></div>
 <div><a href="project_prototype.html">Project Prototype</a></div>
 <div><a href="project_video.html">Project Video</a></div>
-<div><a href="project_report.html">Project Report</a></div>
+<div><a href="final_project.html">Final Project Report</a></div>
 </p>
 
 <h3><a id="participation" class="anchor" href="#participation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Participation</h3>
